- fix table scrollbars on Windows #2237

--- a/src/assets/css/table.css
+++ b/src/assets/css/table.css
@@ -325,6 +325,7 @@
 
     .document-list-table {
         flex: 2.6;
+        height: 100%;
     }
 }
 
